--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,10 @@
 
   <p class="mb-6">Write a story, one word at a time. Unleash your creativity with AI-powered storytelling. Enter a single word, and watch as the story unfolds before your eyes!</p>
 
-  <%= link_to "Create New Story", new_story_path, class: "mt-6 inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600", data: { turbo_method: :post } %>
+  <%= link_to "Create New Story", new_story_path, class: "mt-6 inline-block bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600" %>
 
   <div class="mt-8 text-sm text-gray-600">
+
     <p>Crafted with ❤️ using Ruby on Rails and Tailwind CSS</p>
     <p>© <%= Time.current.year %> One Word Stories | All rights reserved</p>
   </div>
